# music2sound

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: note2frequency.csv  note2midi_note_name.csv
data/music_scores/: happy_birthday.score  happy_birthday2.score  mario.score  octaves.score  tetris.score
data/piano/: convert.bash
include/music2sound/: beep_generator.h  midi_generator.h  midifile.h  sound_list.h  sox_generator.h  utils.h
src/: ros_beep_generator.cpp  ros_midi_generator.cpp  ros_sox_generator.cpp  test_beep_generator.cpp  test_midi_generator.cpp  test_sox_generator.cpp
test/: gtest_beep_generator.cpp  gtest_midi_generator.cpp  gtest_sound_list.cpp  gtest_sox_generator.cpp
